changes to base url rerouting

--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;url=/active" />
+    <meta http-equiv="refresh" content="0;url=/shopping-list" />
   </head>
   <body></body>
 </html>
